# inflation_pandemic

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
inflation_pandemic/: __init__.py  dataset.py  features.py  plots.py
inflation_pandemic/modeling/: predict.py  train.py
