[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "inflation_pandemic"
version = "0.0.1"
description = "A data analysis on the effects of the pandemic on inflation"
authors = [
  { name = "Ronaldo Gonzales" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["inflation_pandemic"]
force_sort_within_sections = true


